<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nathan.automaticalcohol.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/ledToggle_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:scaleX="1.7"
            android:scaleY="1.7"
            android:text="@string/toggle_led"
            android:textStyle="bold" />
            <!--android:layout_alignLeft="@+id/bluetoothStatus"-->
            <!--android:layout_alignStart="@+id/bluetoothStatus"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/rx"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/readBuffer_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/read_buffer" />
                <!--android:layout_centerHorizontal="true"-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bluetoothStatus_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/bluetooth_status" />
                <!--android:layout_alignTop="@+id/checkboxLED1"-->
                <!--android:layout_centerHorizontal="true"-->

        </LinearLayout>

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_on" />
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_toStartOf="@+id/off"-->

        <Button
            android:id="@+id/off_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_off" />
            <!--android:layout_alignBottom="@+id/scan"-->
            <!--android:layout_toEndOf="@+id/PairedBtn"-->
            <!--android:layout_toRightOf="@+id/PairedBtn"-->

        <Button
            android:id="@+id/paired_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_paired_devices" />
            <!--android:layout_below="@+id/scan"-->
            <!--android:layout_toStartOf="@+id/discover"-->

        <Button
            android:id="@+id/discover_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_devices" />
            <!--android:layout_toEndOf="@+id/checkboxLED1"-->
            <!--android:layout_toRightOf="@+id/checkboxLED1"-->
            <!--android:layout_below="@+id/off"-->

        <ListView
            android:id="@+id/devices_listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>
            <!--android:layout_alignEnd="@+id/off"-->
            <!--android:layout_alignRight="@+id/off"-->
            <!--android:layout_below="@+id/PairedBtn"-->

    </LinearLayout>

</RelativeLayout>
